--- a/PayCenter.EntidadesNegocio/PayCenter.EntidadesNegocio.csproj
+++ b/PayCenter.EntidadesNegocio/PayCenter.EntidadesNegocio.csproj
@@ -44,7 +44,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ListaPaginada.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Usuario.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
